# panopticon

./: .gitignore  Makefile.am  README.md  configure.ac
docs/: Doxyfile.in  Makefile.am
lib/: Makefile.am
lib/duktape/: Makefile.am
src/: Makefile.am  mainpage.dox  mainpage.md  panopticon.8  panopticon.c  panopticon.h  process.c  process.h  processline.c  stats.c  stats.h  utils.c  utils.h
src/darwin/: Makefile.am  darwin_process.c  darwin_process.h
src/linux/: Makefile.am  linux_process.c  linux_process.h
test/: Makefile.am  js_process.c  string_utils.c  usage_test.c
